# WebGallery

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
ExpressDir/: vscode-profile-2020-09-24-10-01-45.cpuprofile
ExpressDir/WebGallery/: app.js  package-lock.json  package.json  start.bat  update.bat
ExpressDir/WebGallery/public/javascripts/: mysql.js
ExpressDir/WebGallery/public/stylesheets/: style.css
ExpressDir/WebGallery/routes/: users.js
ExpressDir/WebGallery/views/: index.pug  layout.pug  users.pug
Gallery/: build.gradle  index.html  pom.xml  settings.gradle
Gallery/css/: loginView.css  main.css  mainView.css
Gallery/html/: dbtest.html  dbtest.php
Gallery/js/: ajaxtesty.js  app.js  controller.js  eventHandler.js  interactor.js  main.js  viewHandler.js
Gallery/php/: config.php  get.php  insertblob.php  querys.php  tools.php
Gallery/sql/: AdministrationSetup.sql  DataBaseCreation.sql  TestDataBaseCreation.sql  TestImgAsBlob.sql
Gallery/src/main/java/com/cookaperture/webgallery/: WebGalleryController.java  WebgalleryApplication.java
Gallery/src/main/java/com/example/servingwebcontent/: GreetingController.java
Gallery/src/test/java/com/cookaperture/webgallery/: WebgalleryApplicationTests.java
Wt/: BasicSceleton.cpp  BasicSceleton.h  CMakeLists.txt  CMakeSettings.json  Dispatcher.h  FrontController.h  HomeView.cpp  HomeView.h  InternalTypes.h  TestyView.cpp  TestyView.h  View.h  WWebGallery.cpp  WWebGallery.h  WebGalleryDispatcher.cpp  WebGalleryDispatcher.h  WtTestz.vcxproj  WtTestz.vcxproj.filters  WtWebGallery.sln  copy.bat  main.cpp  main.xml  startparam.txt
Wt/doc_root/: main.css
Wt/x64/Debug/: WtBasicSkeleton.exe.recipe  WtBasicSkeleton.ilk  WtTestz.vcxproj.FileListAbsolute.txt  vc142.idb
Wt/x64/Debug/WtBasicSkeleton.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WtBasicSkeleton.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Wt/x64/Debug/app_root/: main.css
Wt/x64/Debug/app_root/xml/: main.xml
